# CUDA-Implementation-of-the-Longstaff-Schwartz-Method-for-American-Option-Pricing

./: .clangd  .gitignore  ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  P1RV_CUDA.sln  P1RV_CUDA.vcxproj  README.md  ZERO_CHECK.vcxproj  benchmark.csv  benchmark_lsmc.csv  cmake_install.cmake  cols.txt  cuda_core.vcxproj  cuda_core.vcxproj.filters  plot_benchmark.py
.cmake/api/v1/reply/: cache-v2-efdbb03479b9744e9a81.json  cmakeFiles-v1-8dd5337309edef5f4613.json  codemodel-v2-b227f097ce89340aebd9.json  index-2025-12-17T18-46-02-0762.json  target-ALL_BUILD-RelWithDebInfo-db2f44b9567c9f5e554d.json  target-P1RV_CUDA-Debug-e31c128d916c52ee4c6c.json  target-P1RV_CUDA-Release-47a997d9d44f2409d65c.json  (+8 more)
Benchmarks/: benchmark_boosted_new.csv  benchmark_boosted_old.csv  benchmark_degree_precision.csv  benchmark_enriched.csv  benchmark_lsmc.csv  compare_boosted.py  generate_table.py  linearity_benchmark.py  plot_comparison.py  plot_degree_benchmark.py  plot_gpu_block_size.py  plot_openmp_scaling.py  table_output.tex  ui.py
Consignes/: Mail de Jeean-Marie pour le détail des rendus .docx
P1RV_CUDA/: fdm.cpp  fdm.hpp  gbm.cpp  gbm.cu  gbm.hpp  lsmc.cpp  lsmc.cu  lsmc.hpp  main.cu  minmax_kernel.cuh  regression.hpp  rng.hpp
Rapport/: Rapport.aux  Rapport.out  Rapport.tex  Rapport.toc  captions.txt  figures_v2.txt  labels.txt
Soutenance/: Presentation.tex  Questions_Reponses.tex  diagramme_classes.md
Soutenance/Demos/: 00_Demo_Interactive.bat  01_Duel_CPU_vs_GPU_1M.bat  02_Benchmark_Complet.bat  LisezMoi.txt
Soutenance/Demos/Benchmarks/: benchmark_degree_precision.csv
